--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\npk\AppData\Local\Temp\testng-eclipse--404739990\testng-customsuite.xml</span>
+                    <span>C:\Users\npk\AppData\Local\Temp\testng-eclipse-1752585301\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -102,7 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="Testapi.Testapi.Testeq" hash-for-method="queryParamTest1">queryParamTest1</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="Testapi.Testapi.Testeq" hash-for-method="user">user</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -125,9 +125,9 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="queryParamTest1">
-                  </a> <!-- queryParamTest1 -->
-                  <span class="method-name">queryParamTest1</span>
+                  <a name="user">
+                  </a> <!-- user -->
+                  <span class="method-name">user</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -135,7 +135,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\npk\AppData\Local\Temp\testng-eclipse--404739990\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\npk\AppData\Local\Temp\testng-eclipse-1752585301\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -144,7 +144,6 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;Testapi.Testapi.App&quot;/&gt;
       &lt;class name=&quot;Testapi.Testapi.Testeq&quot;/&gt;
       &lt;class name=&quot;Testapi.Testapi.AppTest&quot;/&gt;
     &lt;/classes&gt;
@@ -160,7 +159,7 @@
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">Default test (3 classes)</span>
+                <span class="test-name">Default test (2 classes)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -188,14 +187,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'queryParamTest1')
+data.setCell(0, 1, 'user')
 data.setCell(0, 2, 'Testapi.Testapi.Testeq')
-data.setCell(0, 3, 5558);
+data.setCell(0, 3, 6186);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 5 seconds</span>
+              <span class="suite-total-time">Total running time: 6 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -223,7 +222,7 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">Testapi.Testapi.Testeq</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">queryParamTest1</span>
+                <span class="method-name">user</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
